force-app/main/default/objects/CRM_RAID__c/CRM_RAID__c.object-meta.xml
<CustomObject>
    <description>Used to capture the Risks, Assumptions, Issues and Dependencies related to an Organisation</description>
    <label>Risks &amp; Issues</label>
    <nameField>
        <displayFormat>RI-{000}</displayFormat>
        <label>Risks &amp; Issues Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risks &amp; Issues</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>