force-app/main/default/objects/CRM_RAID__c/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <description>Used to capture the Action Taken for a Issue on a Account record</description>
    <inlineHelpText>Action you have taken to resolve this issue</inlineHelpText>
    <label>Action Taken</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>