force-app/main/default/objects/CRM_RAID__c/fields/Actual_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Resolution_Date__c</fullName>
    <description>The Actual Date the Key Risk was resolved, could be same as Target Resolution Date</description>
    <label>Actual Resolution Date</label>
    <type>Date</type>
</CustomField>