force-app/main/default/objects/CRM_RAID__c/fields/CCS_Risk_Owner__c.field-meta.xml
<CustomField>
    <fullName>CCS_Risk_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to capture the Owner of the Key Risk and who any action/notifications should be assigned to</description>
    <label>CCS Risk/Issue Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RAIDs</relationshipName>
    <type>Lookup</type>
</CustomField>