force-app/main/default/objects/CRM_RAID__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <description>Used to capture the Impact of the Key Risk previously captured</description>
    <inlineHelpText>Impact if this risk / issue is not resolved</inlineHelpText>
    <label>Impact</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>