force-app/main/default/objects/CRM_RAID__c/fields/Impact_Score__c.field-meta.xml
<CustomField>
    <fullName>Impact_Score__c</fullName>
    <description>User decision on an Impact score. Rating to be between 1 and 5</description>
    <inlineHelpText>Impact Score Value to be Low 1 - 5 High</inlineHelpText>
    <label>Impact Score</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>