force-app/main/default/objects/CRM_RAID__c/fields/Key_Risks__c.field-meta.xml
<CustomField>
    <fullName>Key_Risks__c</fullName>
    <description>Used to capture the Key Risk for an Organisation</description>
    <inlineHelpText>Cause of the Risk</inlineHelpText>
    <label>Key Risks</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>