force-app/main/default/objects/CRM_RAID__c/fields/Mitigation__c.field-meta.xml
<CustomField>
    <fullName>Mitigation__c</fullName>
    <description>Used to capture how the Key Risk will be mitigated</description>
    <inlineHelpText>Mitigation to be taken to stop Risk/Issue occurring</inlineHelpText>
    <label>Mitigation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>