force-app/main/default/objects/CRM_RAID__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link RAID records to Organisations</description>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Risks &amp; Issues</relationshipLabel>
    <relationshipName>RAIDs</relationshipName>
    <type>Lookup</type>
</CustomField>