force-app/main/default/objects/CRM_RAID__c/fields/Other_Risk_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Risk_Type__c</fullName>
    <description>If Users selects &apos;Other&quot; for a Risk Type they need to define</description>
    <label>Other Risk Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>