force-app/main/default/objects/CRM_RAID__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <inlineHelpText>Probability of Risk Occurring. Low 1 - 5 High</inlineHelpText>
    <label>Probability</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>