force-app/main/default/objects/CRM_RAID__c/fields/RAID_Status__c.field-meta.xml
<CustomField>
    <fullName>RAID_Status__c</fullName>
    <description>Used to identify whether the Risk/Issue record is still open or the Risk/Issue has been resolved</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>RE-Opened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>