force-app/main/default/objects/CRM_RAID__c/fields/RAID_Type__c.field-meta.xml
<CustomField>
    <fullName>RAID_Type__c</fullName>
    <description>Used to determine whether the Risk or Issue record is a Risk or an Issue and to display this on the All View on the object Homepage</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issue</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>