force-app/main/default/objects/CRM_RAID__c/fields/Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score__c</fullName>
    <description>Risk score is the Impact Multiplied by Probability Score</description>
    <formula>( Impact_Score__c  *  Probability__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Risk score is the Impact Multiplied by Probability Score Low 1 - High 25</inlineHelpText>
    <label>Risk Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>