force-app/main/default/objects/CRM_RAID__c/fields/Target_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Resolution_Date__c</fullName>
    <description>The date by when the Key Risk should be resolved by</description>
    <label>Target Resolution Date</label>
    <type>Date</type>
</CustomField>