force-app/main/default/objects/CRM_RAID__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <inlineHelpText>Private - will not be shared with the Customer or Rest of CCS</inlineHelpText>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Internal CCS Only</fullName>
                <default>true</default>
                <label>Internal CCS Only</label>
            </value>
            <value>
                <fullName>External (Customer)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>