force-app/main/default/objects/CRM_RAID__c/recordTypes/Issue.recordType-meta.xml
<RecordType>
    <fullName>Issue</fullName>
    <active>true</active>
    <description>Something that will happen or is happening</description>
    <label>Issue</label>
</RecordType>