force-app/main/default/objects/CRM_RAID__c/recordTypes/Risk.recordType-meta.xml
<RecordType>
    <fullName>Risk</fullName>
    <active>true</active>
    <description>Something that may happen</description>
    <label>Risk</label>
</RecordType>