force-app/main/default/objects/CRM_RAID__c/validationRules/Probability_Score.validationRule-meta.xml
<ValidationRule>
    <fullName>Probability_Score</fullName>
    <active>true</active>
    <description>Probability score must be values 1 to 5</description>
    <errorConditionFormula>Probability__c  &lt; 1 || 
 Probability__c  &gt; 5</errorConditionFormula>
    <errorDisplayField>Probability__c</errorDisplayField>
    <errorMessage>Probability score needs to be a value between 1 and 5 inclusive</errorMessage>
</ValidationRule>