force-app/main/default/objects/CRM_RAID__c/validationRules/Risk_Type_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Risk_Type_Other</fullName>
    <active>true</active>
    <description>If User select the Risk Type of &quot;other&quot; this field needs to be populated</description>
    <errorConditionFormula>INCLUDES(Risk_Type__c, &quot;Other&quot;)   &amp;&amp; 
 ISBLANK( Other_Risk_Type__c )</errorConditionFormula>
    <errorDisplayField>Other_Risk_Type__c</errorDisplayField>
    <errorMessage>Please detail Risk Type</errorMessage>
</ValidationRule>