force-app/main/default/objects/CRM_RAID__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RAID_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Organisation__c</columns>
    <columns>RAID_Status__c</columns>
    <columns>RAG_Indicator__c</columns>
    <columns>Risk_Score__c</columns>
    <columns>CCS_Risk_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>