force-app/main/default/objects/CRM_RAID__c/listViews/Issues.listView-meta.xml
<ListView>
    <fullName>Issues</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Importance__c</columns>
    <columns>Organisation__c</columns>
    <columns>RAID_Status__c</columns>
    <columns>Target_Resolution_Date__c</columns>
    <columns>Visibility__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CRM_RAID__c.Issue</value>
    </filters>
    <label>Issues</label>
</ListView>