force-app/main/default/objects/CRM_RAID__c/listViews/RISKs.listView-meta.xml
<ListView>
    <fullName>RISKs</fullName>
    <columns>NAME</columns>
    <columns>Organisation__c</columns>
    <columns>Description__c</columns>
    <columns>Importance__c</columns>
    <columns>RAID_Status__c</columns>
    <columns>Risk_Type__c</columns>
    <columns>Visibility__c</columns>
    <columns>RAG_Indicator__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CRM_RAID__c.Risk</value>
    </filters>
    <label>Risks</label>
</ListView>